# ticket-purchase

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
config/: .env.example  config.example.yaml
damai_appium/: config.jsonc  damai_app_v2.py  damai_app_v2.py.atBuy  damai_app_v2.py.atBuy-new  damai_app_v3.py
docs/: ARCHITECTURE.md
docs/plans/: 2026-03-06-uiautomator2-refactor-design.md
src/ticket_purchase/: __init__.py  connection.py  detector.py  executor.py  log.py  main.py  monitor.py  quick_grab.py  recovery.py  scheduler.py  workflow.py
