[project]
name = "ticket-purchase"
version = "2.0.0"
description = "Damai.com automated ticket purchasing system based on uiautomator2"
requires-python = ">=3.12"
dependencies = [
    "uiautomator2>=3.2.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ntplib>=0.4.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
deepseek = ["openai>=1.0.0"]
llm = ["ollama>=0.4.0", "openai>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
ticket = "ticket_purchase.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_purchase"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
